Responsiveness: fixing how nav bar looks on iOS

--- a/apps/marketing/src/index.css
+++ b/apps/marketing/src/index.css
@@ -9,8 +9,15 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    background-color: #ffffff;
+    overscroll-behavior-y: none;
+  }
+
   body {
     font-family: 'Nunito', sans-serif;
+    background-color: #ffffff;
+    overscroll-behavior-y: none;
   }
 }
 
